# overseer

./: .envrc  .gitignore  LICENSE  ansible.cfg  layout  site.yaml  test-layout
Windows 10/: .gitignore  Autounattend.xml  master.json
Windows 10/script/: Enable-WinRM.ps1
group_vars/: all
roles/postgresql/defaults/: main.yaml
roles/postgresql/handlers/: main.yaml
roles/postgresql/tasks/: main.yaml
roles/postgresql/vars/: main.yaml
roles/system/defaults/: main.yaml
roles/system/files/: minimalist  sudo
roles/system/handlers/: main.yaml
roles/system/tasks/: main.yaml
roles/virtualization/files/: kvm.conf
roles/virtualization/handlers/: main.yaml
roles/virtualization/tasks/: main.yaml
roles/vision/: files
roles/vision/defaults/: main.yaml
roles/vision/files/: dump_environment  save_device  vision-device@.service
roles/vision/meta/: main.yaml
roles/vision/tasks/: daemon.yaml  main.yaml  volume.yaml
source/con2fbmap/: main.c
system/: master.json  site.yaml
system/http/: late_command.sh  preseed.cfg
system/script/: ansible.sh  shrink.sh
ubuntu/: .gitignore  master.json  site.yaml
ubuntu/http/: preseed.cfg
ubuntu/script/: sshd.sh  vmware.sh
vision/: .gitignore  CMakeLists.txt  attach  device.c  device.h  layout.c  main.c  qemu-hook-prepare.rb  qemu-hook-release.rb  qemu-hook.rb  qemu-hook.sh  status.h  system.rb  vision.rules  visiond.service  visionrc
vision/script/: device_to_device_is  qemu-hook.rb
vision/udev/: vision.rules
